tmux.conf: remove check for tmux v1.9

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -24,10 +24,9 @@ set -g base-index 1
 
 # Create new windows in the same directory as the current pane
 # This is needed in v1.9
-if-shell "[[ `tmux -V` == *1.9* ]]" \
-'unbind c; bind c new-window -c "#{pane_current_path}"; \
- unbind |; bind | split-window -h -c "#{pane_current_path}"; \
- unbind -; bind - split-window -v -c "#{pane_current_path}";'
+unbind c; bind c new-window -c "#{pane_current_path}"
+unbind |; bind | split-window -h -c "#{pane_current_path}"
+unbind -; bind - split-window -v -c "#{pane_current_path}"
 
 set -g status-left-length 40
 
