--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -33,3 +33,5 @@ set -g status-left-length 40
 set -g base-index 1
 setw -g pane-base-index 1
 
+# https://unix.stackexchange.com/questions/26548/write-all-tmux-scrollback-to-a-file
+bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
