tmux.conf: add choose-tree key bind

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,6 +4,7 @@ unbind-key C-b
 bind-key C-a send-prefix
 
 bind r source-file ~/.tmux.conf
+bind u choose-tree
 
 # Use vi keybindings for copy mode
 setw -g mode-keys vi
