--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,9 +7,9 @@ bind r source-file ~/.tmux.conf
 bind u choose-tree
 
 # Use vi keybindings for copy mode
-setw -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 # Vi style directional movement
 bind h select-pane -L
