tmux.conf: change m key binding to toggle mouse option

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -29,6 +29,8 @@ unbind c; bind c new-window -c "#{pane_current_path}"
 unbind |; bind | split-window -h -c "#{pane_current_path}"
 unbind -; bind - split-window -v -c "#{pane_current_path}"
 
+#unbind m; bind m set-option mouse
+
 set -g status-left-length 40
 
 set -g base-index 1
