--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,3 +38,12 @@ setw -g pane-base-index 1
 
 # https://unix.stackexchange.com/questions/26548/write-all-tmux-scrollback-to-a-file
 bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
+
+
+# TPM:
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+
+run -b '~/.tmux/plugins/tpm/tpm'
